# minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: minishell.h
src/: error.c  exec_commands.c  freedom.c  get_env.c  main.c  my_cd.c  my_echo.c  my_env.c  my_setenv.c  my_unsetenv.c  prompt_message.c  signals.c  utils.c
